Fix issue with overlapping text on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,7 @@ i {
 
 .site-image {
   width: 100%;
-  height: 100%;
+  height: 600px;
   background: url('../images/californians-mint.jpg') center center no-repeat;
   background-size: cover;
 }
